version 3.1.9.2
minor update
added modpack profile xml files
have the ability to control Minecraft profiles via xml